Added patterns to choose

--- a/index.html
+++ b/index.html
@@ -111,6 +111,29 @@
             <div data-color="#BCEB3C"></div>
             <div data-color="#259F6C"></div>
         </div>
+        <div class="row" id=patterns"">
+            <h3>patterns</h3>
+            <div data-pattern="patterns/glitter1.jpg"></div>
+            <div data-pattern="patterns/glitter2.jpg"></div>
+            <div data-pattern="patterns/glitter3.jpg"></div>
+            <div data-pattern="patterns/glitter4.jpg"></div>
+            <div data-pattern="patterns/glitter5.jpg"></div>
+            <div data-pattern="patterns/glitter6.jpg"></div>
+            <div data-pattern="patterns/patt1.jpg"></div>
+            <div data-pattern="patterns/patt2.jpg"></div>
+            <div data-pattern="patterns/patt3.jpg"></div>
+            <div data-pattern="patterns/patt4.jpg"></div>
+            <div data-pattern="patterns/patt5.jpg"></div>
+            <div data-pattern="patterns/patt6.jpg"></div>
+            <div data-pattern="patterns/patt7.jpg"></div>
+            <div data-pattern="patterns/patt8.jpg"></div>
+            <div data-pattern="patterns/patt9.jpg"></div>
+            <div data-pattern="patterns/patt10.jpg"></div>
+            <div data-pattern="patterns/patt11.jpg"></div>
+            <div data-pattern="patterns/patt12.jpg"></div>
+            <div data-pattern="patterns/patt13.jpg"></div>
+            <div data-pattern="patterns/patt14.jpg"></div>
+        </div>
     </div>
 
     <div class="options">
