Added drawing pages functionality

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 <div id="container">
-    <div id="canvas">
-        <canvas></canvas>
+    <div id="canvases">
+        <canvas id="canvas1"></canvas>
+        <canvas id="canvas2"></canvas>
     </div>
 </div>
 <div id="sidebar">
@@ -162,6 +163,6 @@
         </div>
     </div>
 </div>
-<script src="js/app.js"></script>
+<script src="js/out.js"></script>
 </body>
 </html>
