Added coloring pages for select

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div id="container">
     <div id="canvases">
-        <canvas id="canvas1"></canvas>
         <canvas id="canvas2"></canvas>
+        <canvas id="canvas1"></canvas>
     </div>
 </div>
 <div id="sidebar">
@@ -141,6 +141,7 @@
             <label><h3>Pen size</h3></label>
             <input type="range" min="1" max="100" step="1" value="5">
             <output><strong>5</strong></output>
+            <button class="randomMandala">Get random mandala</button>
         </div>
 
         <div class="row">
@@ -158,6 +159,7 @@
                 <option value="crayon">Crayon</option>
                 <option value="pencil">Pencil</option>
                 <option value="paint">Paint</option>
+                <option value="brushPen">Brushpen</option>
                 <option value="marker" selected>Marker</option>
             </select>
         </div>
