Added ES6 functionalities

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
         <div class="row">
             <div class="col-1">
-            <button id="clear">clear canvas</button>
+            <button id="clear">clear drawing</button>
             </div>
             <div class="col-1">
-            <button id="save">Save in PDF</button>
+            <button id="clearAll">clear canvas</button>
             </div>
         </div>
         <div class="row">
@@ -159,7 +159,7 @@
                 <option value="crayon">Crayon</option>
                 <option value="pencil">Pencil</option>
                 <option value="paint">Paint</option>
-                <option value="brushPen">Brushpen</option>
+                <option value="brushPen">Brush pen</option>
                 <option value="marker" selected>Marker</option>
             </select>
         </div>
