Fixed buttons names

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 
         <div class="row">
             <div class="col-1">
-            <button id="clear">clear drawing</button>
+            <button id="clear">clear canvas</button>
             </div>
             <div class="col-1">
-            <button id="clearAll">clear canvas</button>
+            <button id="clearAll">remove outline</button>
             </div>
         </div>
         <div class="row">
